# codex-config

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTEXT.md  README.md  codex-features.json  install.sh  pyproject.toml  pyrightconfig.json  skills-lock.json
.codex/: AGENTS.md
agents/: batch_plan_reviewer.toml  batch_planner.toml  codebase_investigator.toml  fast_explorer.toml  import_topology_reviewer.toml  runway_reviewer.toml  runway_worker.toml  spark.toml
docs/: command-owner-scenario-acceptance.md  skill-routing-contract.md  workflow-guide.md
hooks/: README.md  agent_done_hooks.example.json  agent_done_hooks.json  agent_done_notify.py
plans/: architecture-program-runner-commit-block-report.md  architecture-program-runner-nested-validation-block-report.md  architecture-program-runner-schema-error-report.md  architecture-program-runner-summary-schema-error-report.md  codex-config-architecture-program-artifact-layout-plan.md  codex-config-architecture-program-runner-boundary-split-runway.md  codex-config-architecture-program-runner-findings.md  codex-config-architecture-program-runner-input-inventory-contract-runway.md  codex-config-architecture-program-runner-phase-contract-catalog-runway.md  codex-config-architecture-program-runner-phase-environment-runway.md  codex-config-architecture-program-runner-phase-observation-attribution-runway.md  codex-config-architecture-program-runner-phase-transition-change-allowance-runway.md  codex-config-phase-runner-extraction-prep-runway.md  generic-phase-runner-product-idea.md  local-architecture-program-runner.md  (+1 more)
(+514 files in other folders)
