[project]
name = "codex-config"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.25.1",
    "PyYAML>=6.0.2",
]

[dependency-groups]
dev = [
    "basedpyright==1.39.9",
    "pytest>=9.1.1",
    "ruff>=0.15.20",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py311"
src = ["scripts", "tests"]
